# boilerplate_api

./: README.md  db.sqlite3  manage.py  pyproject.toml
api/: models.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_book.py
api_boilerplate/: asgi.py  settings.py  urls.py  wsgi.py
